name:           2to11
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.18

library
    exposed-modules:    Game, AI, NegamaxAI
    hs-source-dirs:     library
    build-depends:      base, containers, random, transformers, vector
    default-language:   Haskell2010
    ghc-options:        -O2 -Wall
    if flag(documentation)
        build-depends:  hscolour == 1.20.*

executable 2to11
    main-is:            Main.hs
    hs-source-dirs:     executable
    build-depends:      2to11, base, transformers
    default-language:   Haskell2010
    ghc-options:        -O2 -Wall

test-suite hspec
    build-depends:      base, vector, 2to11, hspec, QuickCheck
    default-language:   Haskell2010
    hs-source-dirs:     test
    main-is:            Spec.hs
    type:               exitcode-stdio-1.0

flag documentation
    default:            False
